--- a/1만시간의법칙.html
+++ b/1만시간의법칙.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Figma</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" async src="10000hours.js"></script>
 </head>
 <body>
     <header>
@@ -30,31 +31,37 @@
         시간씩 훈련할 것이다.
     </p>
 
-    <button>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+    <button class="start_btn">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
     </form>
     <img src="Frame%2011.png" alt="">
 </main>
-<footer>
-
-    <section class="timeResult">
-        <p>당신은 <span id="">프로그래밍</span> 전문가가 되기 위해서</p>
-        <p>대략 <span>${}</span>일 이상 훈련하여야 합니다! :)</p>
-        <a href="">훈련하러 가기 GO!GO!</a>
-        <a href="">공유하기</a>
+    <section id="modal">
+        <div class="modalContainer">
+            <p>화이팅!!♥♥♥</p>
+            <p>당신의 꿈을 응원합니다!</p>
+            <img src="라이캣.png" alt="라이캣 사진">
+            <a href="" class="close_btn">종료하고 진짜 훈련하러 가기 GO!GO!</a>
+        </div>
     </section>
-    <script>
-        const myBtn=document.querySelector("button");
-        myBtn.addEventListener('click',function (){
-            console.log('클릭클릭');
-            const resultPage=document.getElementsByClassName("timeResult");
-            resultPage.style.visibility="visible";
-        })
-    </script>
+<footer>
+    <div class="result-loading">
+        <img src="Frame%2012.png" alt="로딩중">
+    </div>
+    <section class="timeResult">
+        <p>당신은 <span class="field-result"></span> 전문가가 되기 위해서</p>
+        <p>대략 <span class="time-result"></span>일 이상 훈련하여야 합니다! :)</p>
+        <div>
+            <a href="" class="modal_btn">훈련하러 가기 GO!GO!</a>
+            <a class="share_btn" href="">공유하기</a>
+        </div>
+    </section>
+
     <section class="copyright">
         <img src="위니브.png" alt="위니브 로고">
         <p>※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다. <br>
             수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.</p>
     </section>
 </footer>
+
 </body>
 </html>
